--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-pager-view": "^5.4.11",
+    "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
     "react-native-svg": "^12.1.1",
