--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.11",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.0.1",
