--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1"
   },
